--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
+    "vite-plugin-pwa": "^0.14.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
