--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
+    "@types/js-base64": "^3.3.1",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.46.1",
     "postcss": "^8.4.21",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "js-base64": "^3.7.4",
     "monaco-editor": "^0.34.1",
     "solid-icons": "^1.0.4",
     "solid-js": "^1.6.6",
